--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "externals拒绝库打包进来",
+  "name": "webpackChunkName-webpackPrefetch",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/vip-coco/webpack-test#readme",
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
-    "webpack": "^5.64.1",
+    "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
