--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "externals拒绝库打包进来",
+  "name": "my-workbox-webpack-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack serve --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/vip-coco/webpack-test#readme",
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
-    "webpack": "^5.64.1",
-    "webpack-cli": "^4.9.1"
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0",
+    "workbox-webpack-plugin": "^6.4.1"
   },
   "dependencies": {
     "jQuery": "^1.7.4"
