--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --config ./webpack.config.js"
+    "dev": "webpack serve --progress --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/vip-coco/webpack-test#readme",
   "devDependencies": {
+    "build-run-webpack-plugin": "^1.0.6",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
